--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             width: 100%;
             height: 100%;
             background:url(ziwei1920.jpg);
-            /*background-size: cover;*/
+            background-size: cover;
             font-size: 85%;
             margin: 0;
         }
